--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,8 @@
 applications:
 - name: jurisdication
-  memory: 512M
+  memory: 1G
   instances: 2
-  buildpack: https://github.com/cloudfoundry/java-buildpack.git
-  health-check-type: http
-  health-check-http-endpoint: /health
-  routes:
-  - route: jurisdication.app.io
-  timeout: 80
+  random-route: true
+  path: target\jurisdicat-1.1-SNAPSHOT.jar
+  services:
+  - jurisdb
